css/style.css
/* ... */
#gallery .grid {
    width: 100%;
    max-width: 80rem;
    margin: 0 auto;
    padding: 0 1rem 4rem 1rem;
}

#gallery .grid .container {
    width: calc(33.33% - 2rem);
    padding: .75rem;
    background-color: var(--background-secondary);
    border: 1px solid var(--border-secondary);
    border-radius: 1rem;
    margin-bottom: 2rem;
}

#gallery .grid .container img, #gallery .grid .container video {
    width: 100%;
    border: 1px solid var(--border-primary);
    border-radius: .75rem;
    box-shadow: 0 3px 12px 2px rgba(0, 0, 0, .4);
}

#gallery .grid .container .info-panel {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: .75rem 0 0;
}

#gallery .grid .container .info-panel .date {
    color: rgba(231, 237, 239, .6);
    font-size: .875rem;
}

#gallery .grid .container .info-panel .category {
    color: var(--accent-gold);
    background-color: rgba(250, 229, 117, .24);
    font-size: .875rem;
    border-radius: .5rem;
    padding: .25rem .5rem;
}

#gallery .grid .container .media-title {
    color: var(--text-primary);
    font-size: 1.25rem;
    font-weight: 300;
    padding-top: .5rem;
}

#gallery .grid .container .media-title a {
    color: var(--accent-gold);
    text-decoration: none;
}

/*----------------------------------------------------*/

footer {
    padding-top: 2.5rem;
    padding-bottom: 4rem;
}

footer .container {
    margin: auto;
    width: 94%;
    max-width: 80rem;
    display: flex;
    flex-direction: row;
    column-gap: 8vw;
}

footer .container .wrapper-l {
    width: 40%;
}

footer .container .wrapper-l h4 {
    font-size: 1.5rem;
    font-weight: 500;
    letter-spacing: 2px;
    padding-bottom: 1.5rem;
}

footer .container .wrapper-l p {
    font-size: .875rem;
}

footer .container .wrapper-r {
    width: 60%;
    display: flex;
    flex-direction: row;
    column-gap: 2rem;
}

footer .container .wrapper-r h5 {
    font-size: 1.25rem;
    font-weight: 300;
    padding-bottom: 1rem;
}

footer .container .wrapper-r p {
    padding: .5rem 0;
}

footer .container .wrapper-r p a {
    color: var(--text-muted);
    font-size: .875rem;
    transition: color .3s;
    text-decoration: none;
}

footer .container .wrapper-r .column {
    width: 100%;
}

